# trainer

./: .gitignore  README.md  config.yaml  config.yaml.bak  config.yaml.bak.1  inference_adapter.py  installFLASHATTN.sh  merge_and_export.py  prepare_dataset.py  prepare_dataset.sh  pyproject.toml  start.sh  train.py
